--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,264 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.card-header {
+	background-color: white;
+}
+.footer {
+	width: 100%;
+	background-color: #AFEEEE;
+	text-align: center;
+	padding: .75em;
+
+}
+.footer p {
+ 	margin: 0;
+}
+.container {
+	text-align: center;
+	background-color: #E0FFFF;
+	padding-right: 0;
+	padding-left: 0;
+}
+.nav {
+	background-color: #17a2b8;
+}
+.nav a  {
+	color: white;
+	cursor: pointer;
+}
+.nav a:hover  {
+	color: rgb(243, 106, 152);
+	text-decoration: underline;
+}
+form#submit_word .bold{
+	font-weight: bold;
+	font-size: 150%;
+}
+form#submit_word button {
+	margin-left:10px;
+}
+.card-header#score {
+	width: 19rem;
+	font-weight: bold;
+	background-color: rgb(243, 106, 152);
+	border-radius: 10px;
+	margin-bottom: 10px;
+}
+.main-text {
+   word-wrap: break-word;
+   width: 600px;
+   margin: auto;
+   color: black;
+}
+.input-group-append {
+	display:block;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.input_names {
+	padding-bottom: 2px;
 }
+.input-group {
+	display: inline-block;
+    margin: 0 auto;
+    text-align: center;
+}
+#input-container {
+    padding:0;
+    height: 30px;
+    margin-right: 10px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    border: none;
+}
+
+#input-word {
+	margin-right: 30%; 
+    margin-left: 30%;
+	float: left;
+    height:40px;
+    margin: 0 auto;
+    display: inline; 
+}
+#input-img {
+    width:50px;
+    height:50px;
+    display:inline-block;
+    bottom: 19px;
+}
+.real-input-box {
+	position: relative;
+	margin: auto;
+	margin-bottom: 10px;
+	border: 1px solid grey;
+	background-color: white;
+	height: 65px;
+	width: 375px;
+	border-radius: 20px;
+}
+.score-box {
+	float: right;
+	display: inline-block;
+	border: 1px solid grey;
+	background-color: white;
+	height: 30px;
+	width: 30px;
+	border-radius: 5px;
+	padding-top: 1px;
+}
+
+.player-active { color: red; }
+
+#blink-me {
+	position: absolute;
+	background-color: #335;
+	top: 7px;
+	left: 15px;
+	width: 3px;
+	height: 46px;
+	animation: blinker 1s linear infinite;
+}
+
+#input-word {
+	position: fixed;
+	top: -10px;
+	width: 0px;
+	height: 0px;
+	border: none;
+
+}
+
+.scrabble-tiles {
+	height: 65;
+	text-align: left;
+	left: 15px;
+}
+
+.scrabble-letter {
+	background: url("/static/background.jpg");
+	background-size: 56px;
+	display: inline-block;
+    width: 56px;
+    height: 60px;
+    position: relative;
+   	z-index: 1;
+}
+.letter {
+	width: 100%;
+	top: 6px;
+	display: block;
+	text-align: center;
+	line-height: normal;
+	font-size: 36px;
+	position: absolute;
+
+}
+.popover-header {
+	text-align: center;
+}
+.popover-body {
+	width: 200px;
+}
+.popover {
+	width: 172px;
+	height: 202px;
+}
+.scrabble-letter:hover {
+	box-shadow: 0 0 15px red;
+	z-index: 10;
+}
+
+.score {
+	position: absolute;
+	text-align: right;
+	bottom: 0;
+	right: 3px;
+}
+
+#move {
+	width: 75px;
+}
+.scrabble-tiles {
+	position: relative;
+	bottom: 23px;
+}
+.scrabble-letter {
+	cursor: pointer;
+}
+.modifier {
+	margin: 2px;
+	background-image: url('/static/modifier-frame.png');
+	background-size: 138px 69px;
+	width: 69px;
+	height: 69px;
+	display: inline-block;
+	text-align: center;
+	font-family: sans-serif;
+	line-height: 120%;
+	padding-top: 13px;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 12px;
+	cursor: pointer;
+}
+.modifier.double-letter {
+	background-color: #9fcae0;
+}
+.modifier.double-word {
+	background-color: #eda498;
+}							
+.modifier.tripple-letter {
+	background-color: #18a3e1;
+	background-position: 69px 0px;
+}
+.modifier.tripple-word {
+	background-color: #f74d13;
+	background-position: 69px 0px;
+}
+.modifier:hover {
+	box-shadow: 0 0 15px red;
+	z-index: 10;
+}
+.scrabble-letter.double-letter {
+	border-style: solid;
+	border-color: #9fcae0;
+	z-index: 10;
+}
+.scrabble-letter.double-word {
+	border-style: solid;
+	border-color: #eda498;
+	z-index: 10;
+}
+.scrabble-letter.tripple-letter {
+	border-style: solid;
+	border-color: #18a3e1;
+	z-index: 10;
+}
+.scrabble-letter.tripple-word {
+	border-style: solid;
+	border-color: #f74d13;
+	z-index: 10;
+}
+
+@keyframes blinker {  
+  0% { opacity: 1; }
+  49% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 0; }
+}
+
+.child {
+	top: 8px;
+}
+
+.word-submit-button {
+	margin-top: 30px;
+}
+
+tr.head {
+	background-color: #48D1CC;
+}
+h1 {
+	color:rgb(238, 62, 128);
+}
+body {
+	text-align: center;
+}
+
