--- a/src/index.css
+++ b/src/index.css
@@ -116,9 +116,15 @@ form#submit_word button {
 	text-align: left;
 	left: 15px;
 }
-
+/*double-letter linear-gradient(rgba(159, 202, 224, 0.1), rgba(159, 202, 224, 1)), url("/background.jpg")
+  double-word linear-gradient(rgba(237,164,152, 0.1), rgba(237,164,152, 1)), url("/background.jpg")
+  triple-letter linear-gradient(rgba(24,163,225, 0.1), rgba(24,163,225, 1)), url("/background.jpg")
+  triple-word linear-gradient(rgba(247,77,19, 0.1), rgba(247,77,19, 1)), url("/background.jpg")
+*/
 .scrabble-letter {
-	background: url("/background.jpg");
+	background-image: url("/background.jpg");
+	border: 5px;
+	border: black;
 	background-size: 56px;
 	display: inline-block;
     width: 56px;
@@ -126,6 +132,7 @@ form#submit_word button {
     position: relative;
    	z-index: 1;
 }
+
 .letter {
 	width: 100%;
 	top: 6px;
@@ -203,24 +210,16 @@ form#submit_word button {
 	z-index: 10;
 }
 .scrabble-letter.double-letter {
-	border-style: solid;
-	border-color: #9fcae0;
-	z-index: 10;
+	background-image: linear-gradient(rgba(159, 202, 224, 0.1), rgba(159, 202, 224, 1)), url("/background.jpg");
 }
 .scrabble-letter.double-word {
-	border-style: solid;
-	border-color: #eda498;
-	z-index: 10;
+	background-image: linear-gradient(rgba(237,164,152, 0.1), rgba(237,164,152, 1)), url("/background.jpg");
 }
 .scrabble-letter.triple-letter {
-	border-style: solid;
-	border-color: #18a3e1;
-	z-index: 10;
+background-image:  linear-gradient(rgba(24,163,225, 0.1), rgba(24,163,225, 1)), url("/background.jpg");
 }
 .scrabble-letter.triple-word {
-	border-style: solid;
-	border-color: #f74d13;
-	z-index: 10;
+background-image: linear-gradient(rgba(247,77,19, 0.1), rgba(247,77,19, 1)), url("/background.jpg");
 }
 
 @keyframes blinker {  
