--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@
 	padding-left: 0;
 }
 
+.navbar {
+	width: 100%;
+	height: 50px;
+	background-color: #A9A9A9;
+}
+
 body {
 	text-align: center;	
 }
@@ -24,7 +30,7 @@ h1 {
 
 .footer {
 	width: 100%;
-	background-color: #AFEEEE;
+	background-color: #A9A9A9;
 	text-align: center;
 	padding: .75em;
 
