--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-.container {
+/*.container {
 	text-align: center;
 	background-color: #F5F5F5;
 	padding-bottom: 15px;
 	padding-right: 0;
 	padding-left: 0;
-}
+}*/
 
 .navbar {
 	width: 100%;
@@ -20,21 +20,20 @@ h1 {
 	color: rgb(238, 62, 128);
 }
 
-.input-group {
-  display: inline-block;
-	margin: 0 auto;
-  
+img.scrabble-logo {
+	width: 17%;
+  height: auto;
+  margin-top: -3px;
 }
 
-
-
-.footer {
+footer {
 	width: 100%;
 	background-color: #A9A9A9;
 	text-align: center;
 	padding: .75em;
 
 }
+
 .footer p {
  	margin: 0;
 }
