--- a/src/index.css
+++ b/src/index.css
@@ -5,35 +5,34 @@
 	padding-right: 0;
 	padding-left: 0;
 }*/
-.get-in-touch {
-	display: flex;
-	justify-content: space-between;
-	margin: 0 75px;
-}
-.email.contact-link {
-	margin-top: 4px;
-}
-.copyright {
-	margin-top: 30px;
-}
-.contact-link {
-	margin: 0 10px;
+.git-hub.contact-link {
+	background-image: url("/git-hub-logo.png");
+	background-size: 34px;
 }
 
-.logoimage {
-	width: 35px;
-	height: 35px;
-	border-radius: 10%
+.facebook.contact-link {
+	background-image: url("/facebook.png");
+	background-size: 34px;
 }
+
+.contact-link {
+	height: 34px;
+	width: 34px;
+	display: inline-block;
+	border-radius: 10%;
+	margin-left: 5px;
+}
+
+.contact-link p {
+	opacity: 0;
+}
+
+
 
 .navbar {
 	width: 100%;
 	height: 50px;
 	background-color: #A9A9A9;
-}
-
-body {
-	text-align: center;	
 }
 
 h1 {
@@ -48,13 +47,9 @@ img.scrabble-logo {
 
 footer {
 	margin-top: 40px;
-	width: 100%;
+	padding-top: 24px;
 	background-color: #A9A9A9;
-	text-align: center;
-	padding: .75em;
-
 }
 
-.footer p {
- 	margin: 0;
-}
+
+
