Input box and scrolling bux fixed

--- a/src/components/ScrabbleInputBox/ScrabbleInputBox.css
+++ b/src/components/ScrabbleInputBox/ScrabbleInputBox.css
@@ -23,8 +23,10 @@
 }
 
 .hidden-input {
+	color: transparent;
 	background-color:transparent;
   border: none;
+  outline: none;
 	position: absolute;
 	caret-color: transparent;
 	bottom: 18px;
