--- a/src/components/ScrabbleScoreKeeper/ScrabbleScoreKeeper.css
+++ b/src/components/ScrabbleScoreKeeper/ScrabbleScoreKeeper.css
@@ -45,6 +45,11 @@
 	margin-top: 10px;
 	font-size: 16px;
 }
+
+.mobile label {
+  height: 46px;
+  width: 149px;
+}
 .mobile .add-word {
   padding: inherit;
   height: 46px;
@@ -104,80 +109,27 @@ th {
   font-size: 16px;
 }
 
-.bingo-toggle-switch {
-  display: inline-block;
-  margin: 8px;
-  width: 180px;
-  height: 46px;
-}
-
-label {
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  width: 180px;
-  height: 46px;
-  position: absolute;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  cursor: pointer;
-}
-.mobile label {
-    height: 46px;
-    width: 149px;
-}
-
-.bingo-toggle {
-  display: inline-block;
-  position: relative;
-  height: 100%;
-  width: 100%;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-transition: all 600ms;
-  transition: all 600ms;
-  z-index: 1000000000;
-}
-
-.mobile .bingo-toggle-switch {
-  height: 46px;
-  width: 149px;
-}
-
-.bingo-toggle div {
-  margin-top: 50px;
-  font-family: Verdana,Geneva,sans-serif;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background-color: white;
-  line-height: 41px;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  border-radius: 2px;
-}
-
-.bingo-toggle .back {
-  background: #A9A9A9;
-  color: black;
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-  border: solid;
-  border-color: grey;
-}
-.bingo-toggle .front {
-  border: solid;
-  border-color: #C0C0C0;
-}
-
-.bingo-toggle-switch input {
+.add-word-and-bingo-btns-container input {
   display: none;
 }
 
-:checked + .bingo-toggle {
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
+label {
+  padding: .375rem .75rem;
+  border: solid;
+  border-color: #C0C0C0;
+  margin: 8px;
+  cursor: pointer;
+  font-size: 21px;
+  font-family: Verdana,Geneva,sans-serif;
+  font-size: 16px;
+  height: 46px;
+  width: 180px;
+  border-radius: .25rem;
 }
+
+:checked + label {
+  background-color: #F0F0F0;
+}
+
 
  
