--- a/src/components/ScrabbleScoreKeeper/ScrabbleScoreKeeper.css
+++ b/src/components/ScrabbleScoreKeeper/ScrabbleScoreKeeper.css
@@ -2,7 +2,7 @@
 .btn {
 	border: solid;
   border-color: #C0C0C0;
-	margin: 8px;
+	margin: 4px;
 	cursor: pointer;
 	font-size: 21px;
   font-family: Verdana,Geneva,sans-serif;
@@ -13,7 +13,10 @@
 	height: 46px;
   width: 180px;
 }
-
+.mobile .add-word {
+  padding: inherit;
+  width: 149px;
+}
 
 .pass-endturn-button {
 	width: 230px;
@@ -22,39 +25,29 @@
 }
 
 .mobile .pass-endturn-button {
-	width: 316px;
-	height: 46px;
-	font-size: 16px;
+	width: 308px;
 }
 
 .pass-endturn-button {
-	width: 380px;
+	width: 369px;
   font-size: 16px;
 }
 
 .undo {
 	height: 46px;
 	width: 180px;
-	margin-top: 10px;
   font-size: 16px;
 }
 
 .mobile .undo {
-	height: 46px;
 	width: 149px;
-	margin-top: 10px;
-	font-size: 16px;
 }
 
 .mobile label {
   height: 46px;
   width: 149px;
 }
-.mobile .add-word {
-  padding: inherit;
-  height: 46px;
-  width: 149px;
-}
+
 
 .mobile .in-game-controls {
 	width: 100%;	
@@ -78,7 +71,7 @@
 
 .current-score {
   width: 3rem;
-  height: 50px;
+  height: 3rem;
   font-weight: bold;
   background-color: white;
   border-radius: 3px;
@@ -99,6 +92,10 @@
 	text-align: center;
 }
 
+table th {
+  text-align: center;
+}
+
 th {
   font-family: "Times New Roman", Times, serif;
   font-size: 16px;
@@ -117,7 +114,7 @@ label {
   padding: .375rem .75rem;
   border: solid;
   border-color: #C0C0C0;
-  margin: 8px;
+  margin: 4px;
   cursor: pointer;
   font-size: 21px;
   font-family: Verdana,Geneva,sans-serif;
