--- a/src/components/GameSettings/GameSettings.css
+++ b/src/components/GameSettings/GameSettings.css
@@ -18,8 +18,12 @@ display: inline-block;
 }
 
 .description {
-	font-family: Verdana,Geneva,sans-serif;
-	font-size: 16px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 18px;
+}
+
+.mobile .description {
+  font-size: 16px;
 }
 
 /*Design for LANGUAGE SELECT*/
@@ -30,8 +34,11 @@ display: inline-block;
   float: right;
   margin-top: -44px;
   position: relative;
-  font-family: Verdana,Geneva,sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
+}
+.mobile .custom-select {
+  font-size: 16px;
 }
 
 
@@ -48,7 +55,7 @@ button.start {
   border: none;
   color: #FFFFFF;
   text-align: center;
-  font-size: 27px;
+  font-size: 24px;
   font-family: "Times New Roman",Times,serif;
   width: 160px;
   height: 50px;
@@ -75,8 +82,8 @@ button.start {
 	display: inline-block;
 	border-style: dashed;
 	border-width: 5px;
-	font-family: Verdana,Geneva,sans-serif !important;
-	font-size: 19px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 18px;
 }
 
 .form-control.player-name.filled {
@@ -89,7 +96,7 @@ button.start {
 	border-width: 4px;
 	width: 216px;
   height: 48px;
- 	font-size: 18px;
+ 	font-size: 16px;
  	font-family: Verdana,Geneva,sans-serif;
 }
 
