--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,10 @@
 	opacity: 0;
 }
 
-
+body {
+	font-size: 18px;
+	font-family: Verdana,Geneva,sans-serif;
+}
 
 .navbar {
 	width: 100%;
@@ -46,6 +49,7 @@ img.scrabble-logo {
 }
 
 footer {
+	font-size: 16px;
 	margin-top: 40px;
 	padding-top: 24px;
 	background-color: #A9A9A9;
