--- a/src/components/GameSettings/GameSettings.css
+++ b/src/components/GameSettings/GameSettings.css
@@ -18,8 +18,8 @@ display: inline-block;
 }
 
 .description {
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 18px;
+  color: white;
 }
 
 .mobile .description {
@@ -34,7 +34,7 @@ display: inline-block;
   float: right;
   margin-top: -44px;
   position: relative;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Times, serif;
   font-size: 18px;
 }
 .mobile .custom-select {
@@ -82,7 +82,6 @@ button.start {
 	display: inline-block;
 	border-style: dashed;
 	border-width: 5px;
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 18px;
 }
 
