--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 	background-size: 34px;
 }
 
+
 .facebook.contact-link {
 	background-image: url("/facebook.png");
 	background-size: 34px;
@@ -27,15 +28,44 @@
 	opacity: 0;
 }
 
+
+body {
+	background-image: radial-gradient(circle at center, #de322a 60%, #622528 100%);
+	background-repeat: no-repeat;
+}
+
+.vertical-stretch {
+	min-height: 100vh;
+	display: flex;
+  flex-flow: column;
+}
+
+.vertical-stretch > top {
+  flex: 0 1 auto;
+}
+
+.vertical-stretch > .spacer {
+  display: flex;
+  flex-flow: column;
+  flex: 1 1 auto;
+  overflow-y: auto;
+}
+.vertical-stretch > bottom {
+  flex: 0 1;
+}
+
+
 body {
 	font-size: 18px;
-	font-family: Verdana,Geneva,sans-serif;
+	font-family: Times, serif;
+	color: white;
 }
+
+
 
 .navbar {
 	width: 100%;
 	height: 50px;
-	background-color: #A9A9A9;
 }
 
 h1 {
@@ -49,11 +79,13 @@ img.scrabble-logo {
 }
 
 footer {
+	bottom: 0px;
+  left: 0px;
+  right: 0px;
 	font-size: 16px;
 	margin-top: 40px;
 	padding-top: 24px;
-	background-color: #A9A9A9;
-}
+	}
 
 
 
